[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "simble"
# version = "0.0.1"
dynamic = ["version"]
authors = [
  { name="Jessie Fielding", email="jessiejofielding@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme = "README.md"
license= "AGPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy>=1.17.0",
    "pandas",
    "matplotlib",
    "tqdm",
]
description = "Simble is a simulation tool for B cell receptor (BCR) somatic hypermutation (SHM) and affinity maturation. Simble models B cells in the germinal center and their differentiation and migration to other tissues."
keywords = [
    "B cell",
    "B cell receptor",
    "BCR",
    "somatic hypermutation",
    "SHM",
    "germinal center",
    "B cell differentiation",
    "B cell development",
    "repertoire",
    "AIRR",
    "immune system",
    "adaptive immune system",
    "immunology",
    "biology",
]

[project.scripts]
simble = "simble.simble:main"

[project.urls]
Homepage = "https://github.com/hoehnlab/simble"
Issues = "https://github.com/hoehnlab/simble/issues"

[tool.setuptools_scm]